# mc_iisy11_r1300

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  Iisy11r1300Module.cpp  Iisy11r1300Module.h  Iisy11r1300Module.in.cpp
tests/: CMakeLists.txt
